header logic was changed so that header__title & header__link have constant position relatively to header bgIm what enables making a fragment of title transparent color; as well centering of menu nav was improved on large screens

--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,9 @@
       <div class="wrapper">
         <div class="header__logo-text"><a href="#header">NA<br>MU</a></div>
       </div>
-      <div class="wrapper">
+      <div class="header__right">
         <h1 class="header__title">
-              ХУДОЖНІЙ<br>МУЗЕЙ
+              ХУДОЖ<span class="header__title-mod">НІЙ</span><br>МУЗЕЙ
         </h1>
         <a href="#sub" class="header__link">
           <img
