--- a/src/index.html
+++ b/src/index.html
@@ -95,9 +95,13 @@
               <br>
               Музей
             </h1>
-            <button class="header__button">
+            <a
+              href="https://karabas.com/"
+              class="header__button"
+              target="blank"
+            >
               Квитки
-            </button>
+            </a>
           </div>
 
           <div class="header__photo">
@@ -132,7 +136,7 @@
                 26.08-29.11.2019
               </a>
             </p>
-            <h2 class="event__name">
+            <h2 class="event__name event__name--decoration-right">
               Йду і повертаюсь
             </h2>
             <p class="event__text">
@@ -154,7 +158,7 @@
                 26.08-29.11.2019
               </a>
             </p>
-            <h2 class="event__name">
+            <h2 class="event__name event__name--decoration-right">
               І спогади і мрії
             </h2>
             <p class="event__text">
@@ -234,7 +238,6 @@
           class="gallery__photo gallery__photo--sixth"
           alt="photo"
         >
-        <button class="gallery__button">></button>
       </div>
       <a name="friend"></a>
     </section>
