--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
+    <link rel="icon" href="images/favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
@@ -20,37 +21,6 @@
             <div class="header__menu">
 
               <nav class="header__nav nav">
-                <div class="nav__content">
-                  <div class="nav__about about">
-                    <div class="about__item">
-                      <p class="about__title">
-                        Розклад сьогодні:
-                      </p>
-                      <p class="about__text">
-                        12:00 - 19:00
-                      </p>
-                    </div>
-                    <div class="about__item">
-                      <div class="about__title">
-                        <span>Адреса:</span>
-                      </div>
-                      <div class="about__text">
-                        <span>Київ, вул. М. Грушевського, 6</span>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="nav__options">
-                    <ul class="nav__list">
-                      <li class="nav__item"><a class="nav__link" href="#">Спланувати візит</a></li>
-                      <li class="nav__item"><a class="nav__link" href="#">Виставки та події</a></li>
-                      <li class="nav__item"><a class="nav__link" href="#">Колекція</a></li>
-                    </ul>
-                  </div>
-                  <div class="nav__buttons">
-                    <a href="" class="button nav__button">Купити квиток</a>
-                    <a href="" class="button button--inactive nav__button">Стати членом</a>
-                  </div>
-                </div>
                 <button class="nav__toggler-btn">
                   <span class="nav__toggler"></span>
                 </button>
@@ -63,7 +33,49 @@
               </div>
             </div>
           </div>
+          <div class="header__slider slider">
+            <div class="slider__content">
+              <div class="wrap">
+                <div class="slider__about about">
+                  <div class="about__item">
+                    <p class="about__title">
+                      Розклад сьогодні:
+                    </p>
+                    <p class="about__text">
+                      12:00 - 19:00
+                    </p>
+                  </div>
+                  <div class="about__item">
+                    <div class="about__title">
+                      <span>Адреса:</span>
+                    </div>
+                    <div class="about__text">
+                      <span>Київ, вул. М. Грушевського, 6</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider__options">
+                  <ul class="slider__list">
+                    <li class="slider__item"><a class="slider__link" href="#">Спланувати візит</a></li>
+                    <li class="slider__item"><a class="slider__link" href="#">Виставки та події</a></li>
+                    <li class="slider__item"><a class="slider__link" href="#">Колекція</a></li>
+                  </ul>
+                </div>
+                <div class="slider__buttons">
+                  <a href="" class="button slider__button">Купити квиток</a>
+                  <a href="" class="button button--inactive slider__button">Стати членом</a>
+                </div>
+              </div>
+              <div class="slider__image-wrap">
+                <img
+                  class="slider__image"
+                  src="images/header-pic2.png"
+                  alt="boy"
+                >
+              </div>
+            </div>
 
+          </div>
           <div class="header__content">
             <div class="header__info">
               <div class="header__date">10 серпня - 10 листопада</div>
@@ -71,8 +83,9 @@
                 Мистецтво
               </h1>
               <h2 class="header__title-second">ХІХ - ХХ ст.</h2>
-              <div class="header__description">Внесок українських митців у світову культуру 19-20ст</div>
-              <a class="header__button button" href="#">Купити квиток</a>
+              <a class="header__button button" href="#">
+                Купити квиток
+              </a>
               <div class="header__bottom">
                 <span>10.08 - 10.10</span>
               </div>
@@ -162,7 +175,7 @@
                   <div class="event__type">Екскурсія</div>
                   <div class="event__title">Кураторські екскурсії від Павла <br>Гудімова </div>
                   <div class="event__description">Таємниці підготовки, історії експонатів, магія дійства до і в момент вашої присутності – розгортатиметься...</div>
-                  <div class="button">Зареєструватись</div>
+                  <a class="button">Зареєструватись</a>
                 </div>
               </div>
               <div class="event__image-wrap">
@@ -188,7 +201,7 @@
                   <div class="event__type">Майстер-клас</div>
                   <div class="event__title">Подорож до Австралії</div>
                   <div class="event__description">Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт кругосвітньої подорожі - Австралія.</div>
-                  <div class="button">Зареєструватись</div>
+                  <a class="button">Зареєструватись</a>
                 </div>
               </div>
             </div>
@@ -207,7 +220,7 @@
           <div class="visit__info">
             <div class="visit__title">Сплануйте візит до музею</div>
             <p class="visit__description">Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом</p>
-            <div class="visit__button button">Почати</div>
+            <a class="visit__button button" href="#">Почати</a>
           </div>
         </section>
         <section class="news">
@@ -288,15 +301,54 @@
             <div class="footer__item">
               <div class="footer__title">Контакти</div>
               <div class="footer__text">
-                <p>
-                  Київ,<br>вул. М. Грушевського, 6 <br>тел. 278-13-57, 278-74-54 <br>info@namu.kiev.ua
+                <p>Київ,<br>вул. М. Грушевського, 6 </p>
+                <p>тел.&nbsp;
+                  <a class="footer__link" href="tel: 278-13-57">&nbsp;278-13-57</a>,
+                  <a class="footer__link" href="tel: 278-74-54">&nbsp;278-74-54</a>
                 </p>
+                <a class="footer__link" href="mailto:someone@yoursite.com">info@namu.kiev.ua</a>
+
               </div>
               <ul class="footer__sm">
-                <li><a href="#"><img src="images/facebook.png" alt="1"></a></li>
-                <li><a href="#"><img src="images/telegram.png" alt="2"></a></li>
-                <li><a href="#"><img src="images/instagram.png" alt="3"></a></li>
-                <li><a href="#"><img src="images/twitter.png" alt="4"></a></li>
+                <li>
+                  <a
+                    class="footer__media-link"
+                    target="_blank"
+                    rel="noopener"
+                    href="https://www.instagram.com"
+                  >
+                    <img src="images/instagram.svg" alt="3">
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer__media-link"
+                    target="_blank" rel="noopener"
+                    href="https://twitter.com"
+                  >
+                    <img src="images/twitter.svg" alt="4">
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer__media-link"
+                    target="_blank"
+                    rel="noopener"
+                    href="https://telegram.org"
+                  >
+                    <img src="images/telegram.svg" alt="2">
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer__media-link"
+                    target="_blank"
+                    rel="noopener"
+                    href="https://www.facebook.com"
+                  >
+                    <img src="images/facebook.svg" alt="1">
+                  </a>
+                </li>
               </ul>
             </div>
             <div class="footer__item">
@@ -332,10 +384,8 @@
           <div class="footer__bottom">
             <span>© 2010 — 2020</span>
             <a href="" class="footer__link">Privacy — Terms</a>
-
           </div>
         </div>
-
       </footer>
     </div>
     <script src="scripts/main.js"></script>
