--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU Художній музей</title>
+    <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
@@ -65,12 +66,12 @@
       </div>
       <div class="left">
 
-        <div class="left__text">
+        <a href="#current-events" class="left__text">
           <p class="left__text__paragraph">
             ПОДІЇ
           </p>
           <div class="left__text__line"></div>
-        </div>
+        </a>
         <div class="left__center">
           <h1 class="title left__center__title">
             ХУДОЖ
@@ -92,10 +93,10 @@
         </div>
       </div>
 
-      <div class="right">
-        <h2 class="namu right__namu">
+      <div  class="right">
+        <a href="#" class="namu right__namu">
           NA<br>MU
-        </h2>
+        </a>
 
         <h1>
           <span class="title right__span">
