animations/hovers added, nav for wide screens, bugs fixed

--- a/src/index.html
+++ b/src/index.html
@@ -29,19 +29,63 @@
             <div class="burger__line burger__line--3"></div>
             <div class="burger__line burger__line--4"></div>
             <nav class="burger__menu">
-              <a class="burger__link burger__link--1" href="#shop">Shop</a>
-              <a class="burger__link" href="#contact-us">Contact</a>
-              <a class="burger__link" href="#about">About</a>
+              <a class="burger__link burger__link--1" href="#gallery">Галерея</a>
+              <a class="burger__link" href="#events">Виставки та події</a>
+              <a class="burger__link" href="#main-event">Відвідування</a>
+              <a class="burger__link" href="#subscription">Стати нашим другом</a>
             </nav>
           </div>
-          <!-- <div class="header__side-text"></div> -->
-          <p class="header__events">ПОДІЇ</p>
+          <div class="header__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#events" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#main-event" class="nav__link">
+                  Відвідування
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#subscription" class="nav__link">
+                  Стати нашим другом
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Магазин
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Блог
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+          <p class="header__events"><a href="#events">ПОДІЇ</a></p>
           <h1 class="header__name">ХУДОЖ<span class="header__name-transparent">НІЙ</span></span><br>МУЗЕЙ</h1>
           <a class="header__tickets" href="#">КВИТКИ</a>
         </div>
       </header>
       <main class="main">
-        <section class="events">
+        <section class="events" id="events">
           <h2 class="events__title">Актуальні події</h2>
           <div class="events__event-card-1 event-card">
             <div class="event-card__image events__event-card-1--left-image">
@@ -61,7 +105,6 @@
               </p>
             </div>
           </div>
-          <!--  -->
           <div class="events__event-card-2 event-card">
             <div class="event-card__image events__event-card-2--right-image">
               <img src="images/events_2.png" alt="events picture">
@@ -82,7 +125,7 @@
             </div>
           </div>
         </section>
-        <section class="main-event">
+        <section class="main-event" id="main-event">
           <div class="main-event__image">
             <img src="images/view.png" alt="even picture">
           </div>
@@ -94,7 +137,7 @@
             <p class="main-event__description-name">Від класицизму до романтизму</p>
           </div>
         </section>
-        <section class="gallery">
+        <section class="gallery" id="gallery">
           <h2 class="gallery__title">Галерея</h2>
           <div class="gallery__items">
             <div class="gallery__item">
@@ -120,7 +163,7 @@
             <img src="images/gallery_dots.svg" alt="">
           </div>
         </section>
-        <section class="subscription">
+        <section class="subscription" id="subscription">
           <h2 class="subscription__title">Підписка</h2>
           <p class="subscription__details">Бути в курсі всіх актуальних подій та останніх новин.</p>
           <form class="subscription__form" action="#">
@@ -129,7 +172,9 @@
               class="subscription__input"
               id="subscribe" name="subscribe"
               type="email"
-              placeholder="E-mail">
+              placeholder="E-mail"
+              required
+            >
             <button class="subscription__button" type="submit"></button>
           </form>
         </section>
@@ -169,10 +214,10 @@
             Контакти
           </div>
           <div class="footer__contacts-details">
-            вул. М. Грушевського, 6; Київ, 01001
-            тел. +38 (044) 278-13-57
-            факс +38 (044) 278-74-54
-            e-mail: info@namu.kiev.ua
+            вул. М. Грушевського, 6; Київ, 01001<br>
+            <a href="tel:+38-044-278-13-57">тел. +38 (044) 278-13-57</a><br>
+            <a href="fax:+38-044-278-74-54">факс +38 (044) 278-74-54</a><br>
+            <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
           </div>
         </div>
         <div class="footer__arrow-up">
@@ -181,10 +226,10 @@
           </a>
         </div>
         <div class="footer__nav-site">
-          <a href="" class="footer__nav-site-link">Галерея</a>
-          <a href="" class="footer__nav-site-link">Виставки та події</a>
-          <a href="" class="footer__nav-site-link">Відвідування</a>
-          <a href="" class="footer__nav-site-link">Стати нашим другом</a>
+          <a href="#gallery" class="footer__nav-site-link">Галерея</a>
+          <a href="#events" class="footer__nav-site-link">Виставки та події</a>
+          <a href="#main-event" class="footer__nav-site-link">Відвідування</a>
+          <a href="#subscription" class="footer__nav-site-link">Стати нашим другом</a>
         </div>
         <div class="footer__nav-general">
           <a href="" class="footer__nav-general-link">Про Нас</a>
