--- a/src/index.html
+++ b/src/index.html
@@ -268,6 +268,87 @@
       </div>
 
     </main>
+
+    <footer class="footer body__footer">
+      <div class="footer__links">
+        <h2 class="footer__logo">na<br>mu</h2>
+
+        <div class="footer__socLinks">
+          <a class="footer__socLink" href="https://facebook.com">
+            <img src="./images/Facebook (1).svg" alt="facebook">
+          </a>
+
+          <a class="footer__socLink" href="https://instagram.com">
+            <img src="images/instagram (3).svg" alt="instagram">
+          </a>
+        </div>
+      </div>
+
+      <p class="footer__workTime">
+        Графік роботи
+        <br><br>
+        <span class="footer__span">12:00 — 20:00</span> середа<br>
+        <span class="footer__span">12:00 — 20:00</span> четвер<br>
+        <span class="footer__span">12:00 — 20:00</span> п’ятниця<br>
+        <span class="footer__span">11:00 — 19:00</span> субота<br>
+        <span class="footer__span">11:00 — 19:00</span> неділя<br>
+        <br>
+        Вихідні понеділок, вівторок<br>
+        Каса припиняє роботу за 1 годину<br>
+        до закриття музею
+      </p>
+
+      <p class="footer__contacts">
+        Контакти:
+        <br><br>
+        вул. М. Грушевського, 6; Київ, 01001<br>
+        тел. +38 (044) 278-13-57<br>
+        факс +38 (044) 278-74-54<br>
+        e-mail: info@namu.kiev.ua
+      </p>
+
+      <div class="footer__line"></div>
+
+      <ul class="footer__list footer__list-first-part">
+        <li class="footer__item">
+          <a class="footer__link" href="#">Галерея</a>
+        </li>
+
+        <li class="footer__item">
+          <a href="#" class="footer__link">Виставки та події</a>
+        </li>
+
+        <li class="footer__item">
+          <a href="#" class="footer__link">Відвідування</a>
+        </li>
+
+        <li class="footer__item">
+          <a href="#" class="footer__link">Cтати нашим другом</a>
+        </li>
+      </ul>
+
+      <ul class="footer__list footer__list-second-part">
+        <li class="footer__item">
+          <a href="#" class="footer__link">Про Нас</a>
+        </li>
+
+        <li class="footer__item">
+          <a href="#" class="footer__link">Магазин</a>
+        </li>
+
+        <li class="footer__item">
+          <a href="#" class="footer__link">Блог</a>
+        </li>
+
+        <li class="footer__item">
+          <a href="#" class="footer__link">Контакти</a>
+        </li>
+      </ul>
+
+      <p class="footer__copyright">
+        Copyright © 2019. All Rights Reserved.
+      </p>
+    </footer>
   </body>
 
 </html>
