--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+  <body class="page">
+
+    <div class="header page__block">
+      <p class="header__abbr">
+        NA
+        <br>
+        MU
+      </p>
+
+      <picture class="header__img">
+        <source
+          media="(max-width: 1440px)"
+          srcset="./images/header_imgSmall.svg"
+        >
+        <img src="./images/header_imgBig.svg" alt="a photo of a museum">
+      </picture>
+
+      <h1 class="header__title">
+        Худож<span class="header__decoration">ній</span> музей
+      </h1>
+
+      <a class="header__button">
+        квитки
+      </a>
+
+      <div class="header__nameContainer">
+        <p class="header__name">
+          події
+        </p>
+      </div>
+
+    </div>
+
+    <div class="events page__block">
+      <h2 class="events__title">
+        Актуальні події
+      </h2>
+
+      <div class="events__one">
+        <picture class="events__img">
+          <source
+            media="(max-width: 1440px)"
+            srcset="./images/events_oneSmall.svg"
+          >
+          <img src="./images/events_oneBig.svg" alt="a picture of a rock and a tree">
+        </picture>
+
+        <div class="events__container">
+          <div class="events__typeDate">
+            <p class="events__type">
+              ВИСТАВКА
+            </p>
+            <p class="events__date">
+              26.08-29.11.2019
+            </p>
+          </div>
+          <h3 class="events__name">
+            Йду і повертаюсь
+          </h3>
+          <p class="events__description">
+            Національний Художній Музей України презентує
+            унікальну частину колекції Градобанку - українське
+            мистецтво другої половини 1980-1995 років.
+          </p>
+        </div>
+
+      </div>
+
+      <div class="events__two">
+        <picture class="events__img">
+          <source
+            media="(max-width: 1440px)"
+            srcset="./images/events_twoSmall.svg"
+          >
+          <img src="./images/events_twoBig.svg" alt="a picture of a rock and a tree">
+        </picture>
+
+        <div class="events__container">
+          <div class="events__typeDate">
+            <p class="events__type">
+              ВИСТАВКА
+            </p>
+            <p class="events__date">
+              26.08-29.11.2019
+            </p>
+          </div>
+          <h3 class="events__name">
+            І спогади і мрії
+          </h3>
+          <p class="events__description">
+            Національний художній музей України до 100 річчя
+            від дня народження видатної української
+            художниці Тетяни Яблонської відкриває
+            ретроспективну ювілейну виставку «І спогади
+            і мрії».
+          </p>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="lection page__block">
+      <img
+        class="lection_img"
+        src="./images/lection_img.svg"
+        alt="a picture of sunset"
+      >
+    </div>
+
+
   </body>
+
+
+
+
 </html>
