--- a/src/index.html
+++ b/src/index.html
@@ -114,10 +114,25 @@
 
     <div class="lection page__block">
       <img
-        class="lection_img"
+        class="lection__img"
         src="./images/lection_img.svg"
         alt="a picture of sunset"
       >
+
+      <div class="lection__container">
+        <div class="lection__typeDate">
+          <p class="lection__type">
+            ЛЕКЦІЯ
+          </p>
+          <p class="lection__date">
+            26/08/2019 - 11:00
+          </p>
+        </div>
+        <h3 class="lection__name">
+          Від класицизму до романтизму
+        </h3>
+
+      </div>
     </div>
 
 
