added gallery block

--- a/src/index.html
+++ b/src/index.html
@@ -135,6 +135,42 @@
       </div>
     </div>
 
+    <div class="gallery page__block">
+      <h2 class="gallery__title">
+        Галерея
+      </h2>
+      <img
+        class="gallery__img-1"
+        src="./images/gallery_1.svg"
+        alt="a picture of an women"
+      >
+      <img
+        class="gallery__img-2"
+        src="./images/gallery_2.svg"
+        alt="a picture of a winter village"
+      >
+      <img
+        class="gallery__img-3"
+        src="./images/gallery_3.svg"
+        alt="a picture of geese"
+      >
+      <img
+        class="gallery__img-4"
+        src="./images/gallery_4.svg"
+        alt="a picture of a park"
+      >
+      <img
+        class="gallery__img-5"
+        src="./images/gallery_5.svg"
+        alt="a picture of sea"
+      >
+      <img
+        class="gallery__img-6"
+        src="./images/gallery_6.svg"
+        alt="a picture of people"
+      >
+    </div>
+
 
   </body>
 
