--- a/src/index.html
+++ b/src/index.html
@@ -33,32 +33,32 @@
         <nav class="nav menu__nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#gallery" class="nav__link">Галерея</a>
+              <a href="#gallery">Галерея</a>
             </li>
             <li class="nav__item">
-              <a href="#events" class="nav__link">Виставки та події</a>
+              <a href="#events">Виставки та події</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Відвідування</a>
+              <a href="#info">Відвідування</a>
             </li>
             <li class="nav__item">
-              <a href="#subscription" class="nav__link">Стати нашим другом</a>
+              <a href="#subscription">Стати нашим другом</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Про Нас</a>
+              <a href="#info">Про Нас</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Магазин</a>
+              <a href="#subscription">Магазин</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Блог</a>
+              <a href="#subscription">Блог</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Контакти</a>
+              <a href="#info">Контакти</a>
             </li>
           </ul>
         </nav>
-        <a href="#" class="menu__search fas fa-search"></a>
+        <a href="https://google.com.ua" class="menu__search fas fa-search"></a>
       </div>
     </header>
     <main>
@@ -239,7 +239,7 @@
 
       <div class="container">
 
-        <section class="footer">
+        <section class="footer" id="info">
 
           <div class="footer__top">
 
@@ -254,17 +254,17 @@
                   >
                 </a>
                 <div class="footer__network-icons">
-                  <a href="#">
+                  <a href="https://www.facebook.com">
                     <img
                       src="./images/Facebook.png"
-                      class="footer__facebook"
+                      class="footer__icon footer__icon--a"
                       alt="link to facebook"
                     >
                   </a>
-                  <a href="#">
+                  <a href="https://www.instagram.com">
                     <img
                       src="./images/instagram.png"
-                      class="footer__instagram"
+                      class="footer__icon"
                       alt="link to instagram"
                     >
                   </a>
@@ -309,7 +309,7 @@
             </div>
 
             <div class="footer__line">
-              <a href="" class="footer__button button button--foot">↑</a>
+              <a href="#" class="footer__button button button--foot">↑</a>
             </div>
 
             <div class="footer__menu">
@@ -319,25 +319,25 @@
                     <a href="#gallery" class="footer__link">Галерея</a>
                   </li>
                   <li class="footer__item">
-                    <a href="#" class="nav__link">Про Нас</a>
+                    <a href="#info" class="nav__link">Про Нас</a>
                   </li>
                   <li class="footer__item">
                     <a href="#events" class="nav__link">Виставки та події</a>
                   </li>
                   <li class="footer__item">
-                    <a href="#" class="nav__link">Магазин</a>
+                    <a href="#subscription" class="nav__link">Магазин</a>
                   </li>
                   <li class="footer__item">
-                    <a href="#" class="nav__link">Відвідування</a>
+                    <a href="#info" class="nav__link">Відвідування</a>
                   </li>
                   <li class="footer__item">
-                    <a href="#" class="nav__link">Блог</a>
+                    <a href="#subscription" class="nav__link">Блог</a>
                   </li>
                   <li class="footer__item">
                     <a href="#subscription" class="nav__link">Стати нашим другом</a>
                   </li>
                   <li class="footer__item">
-                    <a href="#" class="footer__link">Контакти</a>
+                    <a href="#info" class="footer__link">Контакти</a>
                   </li>
                 </ul>
               </nav>
