added subscription block

--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,37 @@
       >
     </div>
 
+    <div class="subscription page__block">
+
+      <h2 class="subscription__title">
+        Підписка
+      </h2>
+
+      <p class="subscription__text">
+        Бути в курсі всіх актуальних подій та останніх новин.
+      </p>
+
+      <form
+        class="subscription__form"
+        action=""
+      >
+        <input
+          class="subscription__email"
+          type="email"
+          name="email"
+          autocomplete="off"
+          placeholder="E-Mail"
+          required
+        >
+        <button
+          class="subscription__button"
+          type="submit"
+        >
+        </button>
+      </form>
+
+    </div>
+
 
   </body>
 
