fixed nav, design

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
   </head>
 
   <body class="body">
-    <header class="header body__header">
+    <header class="header body__header" id="header">
       <nav class="nav header__nav">
-        <h2 class="nav__logo">na<br>mu</h2>
+        <!-- <h2 class="nav__logo">na<br>mu</h2> -->
 
         <input
           type="checkbox"
@@ -33,35 +33,35 @@
           </li>
 
           <li class="nav__item">
-            <a class="nav__link" href="#">Галерея</a>
+            <a class="nav__link" href="#gallery">Галерея</a>
           </li>
 
           <li class="nav__item">
-            <a href="" class="nav__link">Виставки та події</a>
+            <a href="#actual" class="nav__link">Виставки та події</a>
           </li>
 
           <li class="nav__item">
-            <a href="" class="nav__link">Відвідування</a>
+            <a href="#lecture" class="nav__link">Відвідування</a>
           </li>
 
           <li class="nav__item">
-            <a href="" class="nav__link">Cтати нашим другом</a>
+            <a href="#support" class="nav__link">Cтати нашим другом</a>
           </li>
 
           <li class="nav__item">
-            <a href="" class="nav__link">Про Нас</a>
+            <a href="#support" class="nav__link">Про Нас</a>
           </li>
 
           <li class="nav__item">
-            <a href="" class="nav__link">Магазин</a>
+            <a href="#header" class="nav__link">Магазин</a>
           </li>
 
           <li class="nav__item">
-            <a href="" class="nav__link">Блог</a>
+            <a href="#support" class="nav__link">Блог</a>
           </li>
 
           <li class="nav__item">
-            <a href="" class="nav__link">Контакти</a>
+            <a href="#footer" class="nav__link">Контакти</a>
           </li>
 
           <li class="nav__item">
@@ -71,9 +71,9 @@
           </li>
         </ul>
 
-        <a class="nav__search" href="#">
+        <!-- <a class="nav__search" href="#">
           <img src="images/search.svg" alt="search">
-        </a>
+        </a> -->
       </nav>
 
       <div class="header__text">
@@ -109,7 +109,7 @@
     </header>
 
     <main class="main body__main">
-      <div class="actual main__actual">
+      <div class="actual main__actual" id="actual">
         <h3 class="actual__article">Актуальні події</h3>
 
         <div class="actual__firstBlock">
@@ -164,7 +164,7 @@
         </div>
       </div>
 
-      <div class="lecture main__lecture">
+      <div class="lecture main__lecture" id="lecture">
         <div class="lecture__text">
           <p class="lecture__lecture">лекція</p>
 
@@ -176,7 +176,7 @@
         </div>
       </div>
 
-      <div class="gallery main__gallery">
+      <div class="gallery main__gallery" id="gallery">
         <h3 class="gallery__article">Галерея</h3>
 
         <div class="gallery__images">
@@ -237,7 +237,7 @@
         </div>
       </div>
 
-      <div class="support main__support">
+      <div class="support main__support" id="support">
         <div class="support__content">
           <h3 class="support__article">Підписка</h3>
 
@@ -269,7 +269,7 @@
 
     </main>
 
-    <footer class="footer body__footer">
+    <footer class="footer body__footer" id="footer">
       <div class="footer__links">
         <h2 class="footer__logo">na<br>mu</h2>
 
@@ -311,37 +311,37 @@
 
       <ul class="footer__list footer__list-first-part">
         <li class="footer__item">
-          <a class="footer__link" href="#">Галерея</a>
+          <a class="footer__link" href="#gallery">Галерея</a>
         </li>
 
         <li class="footer__item">
-          <a href="#" class="footer__link">Виставки та події</a>
+          <a href="#actual" class="footer__link">Виставки та події</a>
         </li>
 
         <li class="footer__item">
-          <a href="#" class="footer__link">Відвідування</a>
+          <a href="#lecture" class="footer__link">Відвідування</a>
         </li>
 
         <li class="footer__item">
-          <a href="#" class="footer__link">Cтати нашим другом</a>
+          <a href="#support" class="footer__link">Cтати нашим другом</a>
         </li>
       </ul>
 
       <ul class="footer__list footer__list-second-part">
         <li class="footer__item">
-          <a href="#" class="footer__link">Про Нас</a>
+          <a href="#support" class="footer__link">Про Нас</a>
         </li>
 
         <li class="footer__item">
-          <a href="#" class="footer__link">Магазин</a>
+          <a href="#header" class="footer__link">Магазин</a>
         </li>
 
         <li class="footer__item">
-          <a href="#" class="footer__link">Блог</a>
+          <a href="#support" class="footer__link">Блог</a>
         </li>
 
         <li class="footer__item">
-          <a href="#" class="footer__link">Контакти</a>
+          <a href="#footer" class="footer__link">Контакти</a>
         </li>
       </ul>
 
