added footer block

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 
     </div>
 
-    <div class="events page__block">
+    <div class="events page__block" id="events">
       <h2 class="events__title">
         Актуальні події
       </h2>
@@ -135,7 +135,7 @@
       </div>
     </div>
 
-    <div class="gallery page__block">
+    <div class="gallery page__block" id="gallery">
       <h2 class="gallery__title">
         Галерея
       </h2>
@@ -171,7 +171,7 @@
       >
     </div>
 
-    <div class="subscription page__block">
+    <div class="subscription page__block" id="subscription">
 
       <h2 class="subscription__title">
         Підписка
@@ -202,10 +202,103 @@
 
     </div>
 
+    <footer class="footer page__block page__block-footer">
+
+      <p class="footer__abbr">
+        NA
+        <br>
+        MU
+      </p>
+
+      <div class="footer__socialMedia">
+        <a href="https://www.facebook.com/namu.museum">
+          <img src="./images/footer_Fb.svg" alt="an icon of facebook">
+        </a>
+        <a href="https://www.instagram.com/namu.museum/?fbclid=IwAR1DdPWF95jNX_ci8g6l4wD18mTPsHrGoLLMoi_McKNzwrTZwC_-gNVxHdQ">
+          <img src="./images/footer_Inst.svg" alt="an icom of instagram">
+        </a>
+      </div>
+
+      <div class="footer__schedule">
+        <p class="footer__text">
+          Графік роботи
+        </p>
+        <p class="footer__text">
+          <span class="footer__time">12:00— 20:00</span> середа
+          <br>
+          <span class="footer__time">12:00— 20:00</span> четвер
+          <br>
+          <span class="footer__time">12:00— 20:00</span> п’ятниця
+          <br>
+          <span class="footer__time">12:00— 20:00</span> субота
+          <br>
+          <span class="footer__time">12:00— 20:00</span> неділя
+        </p>
+        <p class="footer__text">
+          Вихідні понеділок, вівторок
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+        </p>
+      </div>
+
+      <div class="footer__contacts">
+        <p class="footer__text">
+          Контакти:
+        </p>
+        <p class="footer__text">
+          вул. М. Грушевського, 6;
+          <br>
+          Київ, 01001
+          <br>
+          тел. +38 (044) 278-13-57
+          <br>
+          факс +38 (044) 278-74-54
+          <br>
+          e-mail: info@namu.kiev.ua
+        </p>
+      </div>
+
+      <div class="footer__line"></div>
+
+      <div class="footer__links">
+        <a class="footer__text" href="#gallery">
+          Галерея
+        </a>
+        <a class="footer__text" href="#events">
+          Виставки та події
+        </a>
+        <a class="footer__text" href="">
+          Відвідування
+        </a>
+        <a class="footer__text" href="#subscription">
+          Стати нашим другом
+        </a>
+      </div>
+
+      <div class="footer__outLinks">
+        <a class="footer__text" href="#">
+          Про Нас
+        </a>
+        <a class="footer__text" href="#">
+          Магазин
+        </a>
+        <a class="footer__text" href="#">
+          Блог
+        </a>
+        <a class="footer__text" href="#">
+          Контакти
+        </a>
+      </div>
+
+      <p class="footer__text footer__rights">
+        Copyright © 2019. All Rights Reserved.
+      </p>
+
+      <p class="footer__text footer__author">
+        Designed by Zhyriada Marina
+      </p>
+
+    </footer>
 
   </body>
-
-
-
-
 </html>
