--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <body class="page">
 
     <div class="header page__block">
+
       <p class="header__abbr">
         NA
         <br>
@@ -28,8 +29,13 @@
       </picture>
 
       <h1 class="header__title">
-        Худож<span class="header__decoration">ній</span> музей
+        Худож
+        <br>
+        музей
       </h1>
+      <span class="header__decoration">
+        ній
+      </span>
 
       <a class="header__button">
         квитки
