--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,21 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__container">
+      <div class="header__main">
+        <div class="header__info">
+          <h1 class="header__title">ХУДОЖ<span>НІЙ</span><br> МУЗЕЙ</h1>
+          <a href="#" class="header__button">КВИТКИ</a>
+        </div>
+      </div>
+
+      <div class="container header__container">
         <a href="#" class="header__logo">
           NA
           <br>
           MU
         </a>
         <a href="#events" class="header__link">ПОДІЇ</a>
-        <div class="header__toggler toggler" onclick="toggleSidebar()"></div>
-
+        <div class="header__toggler toggler"></div>
 
         <nav class="header__nav nav">
           <a href="#" class="nav__logo">
@@ -52,19 +58,15 @@
             <li class="nav__item">
               <a href="#contacts" class="nav__link">Контакти</a>
             </li>
+            <a href="#" class="nav__find"></a>
           </ul>
+
         </nav>
 
 
-        <div class="header__main">
 
-          <div class="header__info">
-            <h1 class="header__title">ХУДОЖ<span>НІЙ</span><br> МУЗЕЙ</h1>
-            <a href="#" class="header__button">КВИТКИ</a>
-          </div>
-
-        </div>
       </div>
+
     </header>
 
     <main class="main">
@@ -197,6 +199,7 @@
             name="email"
             id="email"
             placeholder="E-mail"
+            required
           >
           <button type="submit" class="form__button"></button>
         </form>
@@ -282,14 +285,6 @@
         </div>
       </div>
     </footer>
-    <script>
-    function toggleSidebar() {
-      const header = document.querySelector('.header');
-      const toggler = document.querySelector('.toggler');
-      const nav = document.querySelector('.nav');
-      nav.classList.toggle('nav--open');
-      toggler.classList.toggle('toggler--open');
-    }
-    </script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
